# decision-maker

./: .gitignore  LICENSE  README.md
.cicd/: main-pipeline.yaml  mirror.yaml  update-pipeline.sh
ExplorationLLM/: README.md
ExplorationLLM/ExplorationLlama2/: README.md  llama2-binding-function.py  llama2-server-function.py  pyproject.toml
ExplorationLLM/LlmSpacy/llm_spacy/: __init__.py
ExplorationLLM/Research/: README.md
ExplorationLLM/Research/NLP-Semantic-Role-Labeling/: pyproject.toml
ExplorationLLM/Research/gpsr-command-understanding/: README.md  pyproject.toml  requirements.txt
ExplorationLLM/Research/gpsr-command-understanding/.github/workflows/: ci.yaml
ExplorationLLM/Research/gpsr-command-understanding/experiments/: common.libjsonnet  common_seq2seq.libjsonnet
ExplorationLLM/Research/gpsr-command-understanding/gpsr_command_understanding/: anonymizer.py  parser.py
ExplorationLLM/Research/gpsr-command-understanding/gpsr_command_understanding/data/: enumerate_grammar.py  evaluate_baseline_parsers.py
ExplorationLLM/Research/gpsr-command-understanding/gpsr_command_understanding/demo/: parse_utterance.py  sem_parse_utterance.py  sem_parse_utterance_learned.py
ExplorationLLM/Research/gpsr-command-understanding/gpsr_command_understanding/generator/: generator.py  knowledge.py  loading_helpers.py  paired_generator.py
ExplorationLLM/Research/gpsr-command-understanding/gpsr_command_understanding/models/: __init__.py  command_predictor.py  commands_reader.py  noop_tokenizer.py
ExplorationLLM/Research/gpsr-command-understanding/scripts/: process_turk_data.py  test_all_models  train_all_models
ExplorationLLM/Research/gpsr-command-understanding/test/: test_commands_reader.py  test_generator_grammar.py  test_model.py  test_paired_generator.py  test_parser.py
ExplorationLLM/Research/gpsr-command-understanding/test/fixtures/: seq2seq.json
ExplorationLLM/Research/grut/: .gitignore  README.md  predictor.py  pyproject.toml  train.sh
ExplorationLLM/Research/grut/utils/: confusion_matrix.py
ExplorationLLM/Research/grutv1/: .gitignore  README.md  evaluator.py  huricParser.py  kfold.py  main.py  predictor.py  pyproject.toml  requirements.txt  train.sh  trainer.py
ExplorationLLM/Research/grutv1/data/: huric_sentences_en.csv  lu_dict  sentences_lus_descriptions
ExplorationLLM/Research/grutv1/data/huric/: huric_sentences_en.csv
ExplorationLLM/Research/grutv1/data/huric_dataset/: en_nomap_nogrounding.csv
ExplorationLLM/Research/grutv1/utils/: compute_postprocessing_grounding.py  confusion_matrix.py  enums.py  errorAnalyser.py  files_utils.py  levenshetin_distance.py  luDictComputer.py  parsing_utils.py
ExplorationLLM/Research/grutv2/: .gitignore  grut.py  huricParser.py  predictor.py  pyproject.toml  requirements.txt  trainer.py
ExplorationLLM/Research/grutv2/data/huric_dataset/: en_lmd_halfgrounding_STR_allLexicalReferences.csv
ExplorationLLM/Research/grutv2/logs/: testing_verbose_with_prints_bart_base.out
ExplorationLLM/Research/grutv2/utils/: compute_postprocessing_grounding.py  confusion_matrix_merger.py  errorAnalyser.py  evaluate_from_file.py  levenshetin_distance.py  luDictComputer.py  parsing_utils.py  results_merger.py  well_formed_formula.py
ExplorationLLM/Research/tagE/: LICENSE  README.md  main.py  pyproject.toml
ExplorationLLM/Research/tagE/configs/: args.txt  tasks.txt
ExplorationLLM/Research/tagE/data/: dev.csv  test.csv
ExplorationLLM/Research/tagE/src/: metrics.py
ExplorationLLM/brain-experiment/: .gitignore  Cargo.toml  README.md  gen-bert.py  pyproject.toml
ExplorationLLM/brain-experiment/src/: activation.rs  bert_loader.rs  data.rs  main.rs  model.rs  train.rs
ExplorationLLM/brain-experiment/src/model/: bert_embeddings.rs  bert_encoder.rs  bert_model.rs  mod.rs
ExplorationLLM/brain-experiment/src/parts/: embeddings.rs  layer_norm.rs  mod.rs  multi_headed_self_attention.rs
Full_Pipeline/: README.md  action_server.py  constants.py  llm.py  main.py  memory.py  middlewares.py  models.py  ontology_v2.toml  parse_ontology.py  pipeline.py  pyproject.toml  stt.py
Full_Pipeline/old/: NLP.py  main.py
GPSRGenDataset/: .gitignore  README.md  gen-dataset.rs  huric-template.xml  process-dataset.rs  process-prompt.py  pyproject.toml  raw_dataset.csv
GPSRGenDataset/huric/: huric_types.rs
GPSRGenDataset/rust-script-ide/: Cargo.toml
GPSRGenDataset/tests/: huric_test_frame_dataset.csv
GPSRGenDataset/tests/process-dataset/: test_process-prompt_huric.py
LlmSpacy/: pyproject.toml
ParseOntology/: README.md  main.py  main_v2.py  models.py  ontology.toml  ontology_v2.toml  pyproject.toml
SRL_SpaCy/: README.md  config.cfg  examples.yml  main.py  pyproject.toml
TestLLM/: llama2-binding-function.py  llama2-server-function.py
tagE/configs/: grounding.txt  tage_bart_config.yml  tage_t5_config.yml
tagE/data/: train.csv
