[tool.poetry]
name = "testllm"
version = "0.1.0"
description = ""
authors = ["Johan Planchon <dev@johan.moe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
llama-cpp-python = "^0.2.20"
langchain = "^0.0.342"
langchain-experimental = "^0.0.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
