[package]
name = "brain-grut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11.1", features = ["wgpu", "tui", "train"] }
libm = "0.2"
npy = "0.4"
serde = "1"
serde_json = "1"
