[package]
name = "brain-grut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11.1", features = ["wgpu", "tui", "train"] }
libm = "0.2"
serde = "1"
serde_json = "1"
tokenizers = "0.15"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
