[tool.poetry]
name = "grut"
version = "2.0.0"
description = ""
authors = ["crux82 <croce@info.uniroma2.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "1.13.1+cu116", source = "pytorch" }
nltk = "3.7"
numpy = "1.22.2"
pandas = "1.4.1"
scikit-learn = "1.1.3"
seqeval = "1.2.2"
simpletransformers = "0.63.9"
spacy = "3.3.1"
transformers = "4.16.2"
xlsxwriter = "3.0.2"
openpyxl = "3.1.1"
typing_extensions = "<4.6.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
